# CRS

./: .gitignore  DistanceCalculatingFunction.mm  ReadMe.md  UML_Classes_diagram.xmi  company_car_request_algorithm.mm  pyproject.toml
app/: car.py  coordinates.py  target.py
tests/: test_car.py  test_coordinates.py  test_target.py
